--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,12 @@ body {
     background-color: #f5f5f5;
 }
 
+.contact{
+    border:2px solid lightblue;
+    margin:10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
+}
+
 #github{
     text-align:center;
 }
