Fixed portfolio padding/margins

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,12 @@ html {
     min-height: 100%;
 }
 
+.container-fluid, .row{
+    margin:0;
+    padding:0;
+    width:100%;
+}
+
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
